--- a/config/user_config.ini
+++ b/config/user_config.ini
@@ -1,4 +1,4 @@
-[设置]
+[Settings]
 # 生成结果文件路径; 默认值: output/result.txt | Generate result file path; Default value: output/result.txt
 final_file = output/user_result.txt
 # 模板文件路径， 默认值: config/demo.txt | Template file path, Default value: config/demo.txt
